--- a/SourceGenerator/SourceGenerator.csproj
+++ b/SourceGenerator/SourceGenerator.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <!--<IsRoslynComponent>true</IsRoslynComponent>-->
+    <IsRoslynComponent>true</IsRoslynComponent>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
